<resources>

    <string name="app_name">Deberts</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="enter_your_name_title">Введите ваше имя</string>
    <string name="choose_game_type">Выберите режим игры</string>
    <string name="start_game_button_title">Начать игру</string>
    <string name="title_activity_game_one_vs_one">GameOneVsOneActivity</string>
    <string name="title_activity_kozir_choose_one_vs_one">KozirChooseOneVsOneActivity</string>
    <string name="play_button_title">Играю</string>
    <string name="pass_button_title">Пасс</string>
    <string name="your_word_title">Ваше слово</string>
    <string name="objaz_title">Обяз у %s</string>
    <string name="android_player_name_title">Android</string>
    <string name="continue_button_title">Продолжить</string>
    <string name="new_game_button_title">Новая игра</string>
    <string name="settings_button_title">Настройки</string>
    <string name="turn_off_ad_button_title">Отключить рекламу</string>
    <string name="exit_button_title">Выход</string>
    <string name="empty_name_error_title">Имя игрока не может быть пустым!</string>
    <string name="pohodit_button_title">Походить</string>
    <string name="otboy_button_title">Отбой</string>
    <string name="kozir_title">Козырь</string>
    <string name="playing_is_title">Играет %s</string>
    <string name="your_turn_title">Ваш ход!</string>
    <string name="last_vzyatka_title">Последняя взятка</string>
    <string name="change_seven_title">Поменять семерку?</string>
    <string name="yes_title">Да</string>
    <string name="no_title">Нет</string>
    <string name="choose_kozir_toast">Выберите козырь!</string>

</resources>
